[gd_scene load_steps=4 format=2]

[ext_resource path="res://client/client_ui.gd" type="Script" id=1]
[ext_resource path="res://client/client.gd" type="Script" id=2]
[ext_resource path="res://resources/fonts/vera-25.tres" type="DynamicFont" id=3]

[node name="Client" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ChatScreen" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Chat" type="VBoxContainer" parent="ChatScreen"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -790.0
margin_bottom = 1.0
rect_scale = Vector2( 1.031, 0.994872 )

[node name="Message" type="HBoxContainer" parent="ChatScreen/Chat"]
margin_right = 234.0
margin_bottom = 24.0

[node name="ChatTextSend" type="LineEdit" parent="ChatScreen/Chat/Message"]
margin_right = 187.0
margin_bottom = 24.0
size_flags_horizontal = 3
placeholder_text = "Enter some text to send..."

[node name="Send" type="Button" parent="ChatScreen/Chat/Message"]
margin_left = 191.0
margin_right = 234.0
margin_bottom = 24.0
text = "Send"

[node name="ChatArea" type="RichTextLabel" parent="ChatScreen/Chat"]
margin_top = 28.0
margin_right = 234.0
margin_bottom = 601.0
size_flags_vertical = 3

[node name="Disconnect" type="Button" parent="ChatScreen"]
margin_left = 4.0
margin_top = 576.0
margin_right = 238.0
margin_bottom = 596.0
rect_scale = Vector2( 1.00943, 1.1 )
toggle_mode = true
text = "Disconnect"

[node name="Client" type="Node" parent="."]
script = ExtResource( 2 )

[node name="Login" type="Panel" parent="."]
margin_right = 1021.0
margin_bottom = 599.0

[node name="Connect" type="Button" parent="Login"]
margin_left = 419.0
margin_top = 293.0
margin_right = 653.0
margin_bottom = 313.0
toggle_mode = true
text = "Connect"

[node name="Username" type="TextEdit" parent="Login"]
margin_left = 385.0
margin_top = 237.0
margin_right = 690.0
margin_bottom = 271.0
rect_rotation = -0.0439733
placeholder_text = "Username"

[node name="UsernameLabel" type="RichTextLabel" parent="Login"]
margin_left = 386.0
margin_top = 188.0
margin_right = 685.0
margin_bottom = 228.0
custom_fonts/normal_font = ExtResource( 3 )
text = "Username"

[connection signal="pressed" from="ChatScreen/Chat/Message/Send" to="." method="_on_Send_pressed"]
[connection signal="pressed" from="ChatScreen/Disconnect" to="." method="_on_Disconnect_pressed"]
[connection signal="pressed" from="Login/Connect" to="." method="_on_Connect_pressed"]
